--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,6 +20,8 @@
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 
+	"containerEnv": { "AWS_REGION": "us-east-1" },
+
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "bash auto/init",
 
@@ -30,10 +32,13 @@
 			"settings": {},
 			"extensions": [
 				"streetsidesoftware.code-spell-checker",
-				"ms-azuretools.vscode-docker"
+				"ms-azuretools.vscode-docker",
+				"vmware.vscode-boot-dev-pack",
+				"vscjava.vscode-java-pack",
+				"redhat.java"
 			]
 		}
-	}
+	},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	"remoteUser": "root"
