--- a/pom.xml
+++ b/pom.xml
@@ -31,12 +31,14 @@
 	</dependencies>
 
 	<build>
+		<finalName>service-catalogue-1.0</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>3.4.1</version>
 				<executions>
