--- a/copilot/environments/dev/manifest.yml
+++ b/copilot/environments/dev/manifest.yml
@@ -18,4 +18,5 @@ type: Environment
 
 # Configure observability for your environment resources.
 observability:
-  container_insights: false
+  container_insights: true
+  tracing: awsxray
