--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -35,7 +35,9 @@
 				"ms-azuretools.vscode-docker",
 				"vmware.vscode-boot-dev-pack",
 				"vscjava.vscode-java-pack",
-				"redhat.java"
+				"redhat.java",
+				"redhat.vscode-yaml",
+				"aws-scripting-guy.cform"
 			]
 		}
 	},
